fix #5 - Add default YAML for Spring 6.2.5 issues
Introduced `issues_spring-6.2.5.yml` resource containing issue data for Spring Framework version 6.2.5. This addition helps maintain version-specific issue tracking and supports future automation or documentation efforts.